# cpp_dhbw

./: .gitignore  README.md
01_lecture/: coding_guidelines.hpp
01_lecture/1_Grundlagen_Cpp/1_hello_world/: hello_world.cpp
01_lecture/1_Grundlagen_Cpp/2_Wiederholung_C/fib/: fib.cpp
01_lecture/1_Grundlagen_Cpp/2_Wiederholung_C/prim/: prim.cpp
01_lecture/1_Grundlagen_Cpp/2_Wiederholung_C/square/: square.cpp
01_lecture/1_Grundlagen_Cpp/2_Wiederholung_C/sum/: sum.cpp
01_lecture/1_Grundlagen_Cpp/2_Wiederholung_C/test_float/: test_float.cpp
01_lecture/1_Grundlagen_Cpp/2_Wiederholung_C/test_int/: test_integer.cpp
01_lecture/2_Objekorientierung/1_Grundlagen/Datenkapselung_C_Beispiel/: move_vehicle_proce.cpp
01_lecture/2_Objekorientierung/1_Grundlagen/Datenkapselung_Cpp_Beispiel/: move_vehicle_oop.cpp
01_lecture/2_Objekorientierung/1_Grundlagen/Datenkapselung_Cpp_Konstruktor/: move_vehicle_oop_const.cpp
01_lecture/2_Objekorientierung/1_Grundlagen/initialization_list/: initialization_lists.cpp
01_lecture/2_Objekorientierung/1_Grundlagen/overload/: overload.cpp
01_lecture/2_Objekorientierung/1_Grundlagen/task_vehicle/: task_vehicle.cpp
01_lecture/2_Objekorientierung/2_Header_Files/Einführung/: Rectangle.hpp
01_lecture/2_Objekorientierung/2_Header_Files/dynamicArray_C_Style/: array.cpp
01_lecture/2_Objekorientierung/2_Header_Files/enum_class/: enumClass.cpp
01_lecture/2_Objekorientierung/2_Header_Files/vector_for_loops_and_references/: vector.cpp
01_lecture/2_Objekorientierung/3_Vererbung/Vererbung/: main.cpp
01_lecture/2_Objekorientierung/3_Vererbung/Zugriffsmodifikationen/: main.cpp
01_lecture/2_Objekorientierung/3_Vererbung/task_person_professor_student/: main.cpp
01_lecture/2_Objekorientierung/3_Vererbung/task_sensor/: LidarSensor.hpp  PerceptionSensor.hpp  RadarSensor.cpp  RadarSensor.hpp  main.cpp
01_lecture/2_Objekorientierung/4_Polymorphismus/Polymorphismus/: main.cpp
01_lecture/2_Objekorientierung/4_Polymorphismus/task_places/: main.cpp  place.cpp  place.hpp  sight.cpp  sight.hpp  toilet.cpp  toilet.hpp
01_lecture/2_Objekorientierung/4_Polymorphismus/task_sensor/: Object.cpp  PerceptionSensor.hpp  RadarSensor.hpp  main.cpp
01_lecture/2_Objekorientierung/4_Polymorphismus/task_sensors/: LidarSensor.cpp  LidarSensor.hpp  Object.hpp  PerceptionSensor.cpp
01_lecture/2_Objekorientierung/4_Polymorphismus/task_vehicle_driver/: car.hpp  driver.cpp  driver.hpp  main.cpp  vehicle.hpp
01_lecture/2_Objekorientierung/4_Polymorphismus/virtualDestructor/: virtualDestructor.cpp
01_lecture/3_Vertiefung C++/1_Pointer_und_Referenzen/PointerAndReferences/: main.cpp
01_lecture/3_Vertiefung C++/1_Pointer_und_Referenzen/PointerReferencesDynAllocation/: main.cpp
01_lecture/3_Vertiefung C++/2_Keywords/Initialisierung_auto_friend/: main.cpp
01_lecture/3_Vertiefung C++/2_Keywords/const/: main.cpp
01_lecture/3_Vertiefung C++/2_Keywords/constexpr/: const.cpp  const_OOP.cpp
01_lecture/3_Vertiefung C++/2_Keywords/friendExample/: friend.cpp
01_lecture/3_Vertiefung C++/2_Keywords/static/: class.cpp  class.hpp  main.cpp
01_lecture/3_Vertiefung C++/3_namespaces/Introduction/: Vector.cpp  Vector.hpp  main.cpp
01_lecture/3_Vertiefung C++/3_namespaces/task_namespace/: Rectangle.cpp  main.cpp
01_lecture/3_Vertiefung C++/3_namespaces/task_namespace_solved/: Rectangle.cpp  Rectangle.hpp  main.cpp
01_lecture/3_Vertiefung C++/5_Pointer_und_Referenzen/pass_by_reference_value/: main.cpp
01_lecture/4_STL/1_Introduction/BankAccount/: BankAccount.cpp  BankAccount.h
01_lecture/4_STL/2_Container/container_overview/: container_overview.cpp
01_lecture/4_STL/2_Container/task_Supermarket/: task_supermarket.cpp
01_lecture/4_STL/2_iteratoren/Introduction/: main.cpp
01_lecture/4_STL/3_Algorithms/Sort_example/: main.cpp
01_lecture/6_Test_Driven_Development/Mocking_weather/: CMakeLists.txt  main.cpp  weather_api.cpp  weather_api.h  weather_service.cpp  weather_service.h
01_lecture/6_Test_Driven_Development/Mocking_weather/tests/: CMakeLists.txt  test_weather_service.cpp
01_lecture/6_Test_Driven_Development/Motivation/: CMakeLists.txt
01_lecture/6_Test_Driven_Development/Motivation/inc/: factorial.h
01_lecture/6_Test_Driven_Development/Motivation/src/: factorial.cpp  main.cpp
01_lecture/6_Test_Driven_Development/Motivation/test/: test_main.cpp
01_lecture/6_Test_Driven_Development/bowling_kata/: README.md
01_lecture/6_Test_Driven_Development/bowling_kata_solved/: .gitignore  CMakeLists.txt
01_lecture/6_Test_Driven_Development/bowling_kata_solved/src/: game.cpp  game.hpp
01_lecture/6_Test_Driven_Development/bowling_kata_solved/test/: gameTest.cpp
02_tooling/: coding_guidelines.cpp
02_tooling/CMake_Example/task_vehicle_driver_CMake/: CMakeLists.txt
02_tooling/CMake_Example/task_vehicle_driver_CMake/config/: config.json
02_tooling/CMake_Example/task_vehicle_driver_CMake/src/: car.cpp  main_copy.cpp  motorbike.cpp  vehicle.cpp
02_tooling/CMake_Example/task_vehicle_driver_noCMake/: main.cpp  motorbike.hpp
02_tooling/Git_Commands/: README.md
03_coding_projects/Projektabgabe/: Programmentwurf_Beispiele.cpp
(+33 files in other folders)
